--- a/wechat/Makefile
+++ b/wechat/Makefile
@@ -1,4 +1,4 @@
 all:wechat
 
-wechat:server.c server_tcp.c server_udp.c uinsock.c
+wechat:server.c server_tcp.c server_udp.c uinsock.c handle_request.c
 	gcc $^ -o wechat -lpthread
