--- a/client/linux/makefile
+++ b/client/linux/makefile
@@ -1,3 +1,3 @@
 all:cli
-cli:client.c connect_server.c function.c show_menu.c
+cli:client.c connect_server.c function.c show_menu.c load.c registered.c 
 	gcc -g $^ -o $@ -lpthread
