--- a/wechat/Makefile
+++ b/wechat/Makefile
@@ -1,4 +1,4 @@
 all:wechat
 
 wechat:server.c server_tcp.c server_udp.c uinsock.c handle_request.c database.c
-	gcc -I /usr/local/include -L /usr/local/lib $^ -o wechat -lpthread -lsqlite3
+	gcc -I /home/luo/install/sqlite3/include -L /home/luo/install/sqlite3/lib $^ -o wechat -lpthread -lsqlite3
